update dependency version based on rzwitserloot/lombok/issues/2681